[gd_scene load_steps=39 format=2]

[ext_resource path="res://actors/player/PlayerStateMachine/PlayerStateMachine.gd" type="Script" id=1]
[ext_resource path="res://actors/player/PlayerStateMachine/States/Idle.gd" type="Script" id=2]
[ext_resource path="res://actors/player/PlayerStateMachine/States/Run.gd" type="Script" id=3]
[ext_resource path="res://actors/player/PlayerStateMachine/States/Attack.gd" type="Script" id=4]
[ext_resource path="res://actors/hit-hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/player/Player1/dude-idle.png" type="Texture" id=6]
[ext_resource path="res://actors/player/Player1/dude-running.png" type="Texture" id=7]
[ext_resource path="res://actors/player/Player1/dude-combo-spritesheet.png" type="Texture" id=8]
[ext_resource path="res://actors/shadow.png" type="Texture" id=9]
[ext_resource path="res://actors/player/PlayerStateMachine/MainComboTest.gd" type="Script" id=10]
[ext_resource path="res://actors/player/PlayerStateMachine/InpuBuffer.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 4 )

[sub_resource type="Animation" id=3]
length = 0.24
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.16, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.06, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("States/Attack/MainCombo")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.12 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "can_attack"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.24 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_animation_finished"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.42
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.06, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("States/Attack/MainCombo")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.24 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "can_attack"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.42 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hit3"
length = 0.28
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.04, 0.16, 0.2, 0.26 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.06, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.28 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_animation_finished"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("States/Attack/MainCombo")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.28 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset_combo"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.32
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
length = 0.56
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Hit1"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Hit2"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Hit3"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Hit4"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachine" id=27]
states/Hit1/node = SubResource( 9 )
states/Hit1/position = Vector2( 135, 6 )
states/Hit2/node = SubResource( 10 )
states/Hit2/position = Vector2( 240, -55 )
states/Hit3/node = SubResource( 11 )
states/Hit3/position = Vector2( 412, -55 )
states/Hit4/node = SubResource( 12 )
states/Hit4/position = Vector2( 528, 6 )
states/Idle/node = SubResource( 13 )
states/Idle/position = Vector2( 226, 97 )
states/Run/node = SubResource( 14 )
states/Run/position = Vector2( 470, 97 )
transitions = [ "Idle", "Run", SubResource( 15 ), "Run", "Idle", SubResource( 16 ), "Idle", "Hit1", SubResource( 17 ), "Hit1", "Hit2", SubResource( 18 ), "Hit1", "Idle", SubResource( 19 ), "Hit2", "Idle", SubResource( 20 ), "Hit3", "Idle", SubResource( 21 ), "Hit2", "Hit3", SubResource( 22 ), "Hit3", "Hit2", SubResource( 23 ), "Hit3", "Hit4", SubResource( 24 ), "Hit4", "Idle", SubResource( 25 ), "Run", "Hit1", SubResource( 26 ) ]
start_node = "Idle"
graph_offset = Vector2( -72.2206, -106.848 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=28]

[node name="PlayerStateMachine" type="KinematicBody2D"]
collision_layer = 2147483650
collision_mask = 17
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 8 )
vframes = 4
hframes = 5
frame = 19

[node name="Hitbox" parent="Sprite" instance=ExtResource( 5 )]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
position = Vector2( 20, 2 )
shape = SubResource( 1 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hurtbox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Hit1 = SubResource( 3 )
anims/Hit2 = SubResource( 4 )
anims/Hit3 = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Run = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 27 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 28 )

[node name="States" type="Node" parent="."]

[node name="Run" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="MainCombo" type="Node" parent="States/Attack"]
script = ExtResource( 10 )

[node name="ComboTimeout" type="Timer" parent="States/Attack/MainCombo"]
wait_time = 0.5
one_shot = true

[node name="ShowState" type="Label" parent="."]
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
text = "aaaa"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowAttackIndex" type="Label" parent="."]
margin_left = -20.0
margin_top = 12.0
margin_right = 20.0
margin_bottom = 26.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InpuBuffer" type="Node" parent="."]
script = ExtResource( 11 )

[node name="InputCooldown" type="Timer" parent="InpuBuffer"]
wait_time = 0.5
one_shot = true
[connection signal="hit" from="Sprite/Hitbox" to="States/Attack/MainCombo" method="_on_Hitbox_hit"]
[connection signal="timeout" from="States/Attack/MainCombo/ComboTimeout" to="States/Attack/MainCombo" method="_on_ComboTimeout_timeout"]
[connection signal="timeout" from="InpuBuffer/InputCooldown" to="InpuBuffer" method="reset_buffer"]
